app1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 8088
      targetPort: 80
      nodePort: 30011
  type: NodePort
