app1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-1
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - nginx1.tryrocket.cloud
    secretName: example-com-tls
  rules:
  - host: nginx1.tryrocket.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8088
